@@ -1,3 +1,11 @@
+2003-07-30  John Levon  <levon@movementarian.org>
+
+	* libutil++/op_bfd.h:
+	* libutil++/op_bfd.cpp: bfd_openr() keeps a copy of
+	the passed in char * around, sickenly enough. Ensure lifetimes
+	will always be correct by adding a filename data member to
+	op_bfd
+
 2003-07-29  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* libpp/op_header.h:
